@@ -12,6 +12,7 @@ Summary: smartmontools release 6.1
 - smartctl: Fix parsing of '-l select,cont+SIZE' option.
 - smartd runs /etc/smartd_warning.sh to generate warning emails
   (Windows: smartd_warning.cmd).
+- smartd '-w PATH' option to specify this executable.
 - smartd '-d ignore' directive.
 - smartd DEVICESCAN ignores devices already specified.
 - Linux: Support for SAS disks behind Areca controllers.
